# daetools

./: README.md  compile.sh  compile_libraries.sh  config.h  cross-compile-i686-w64-mingw32.cmake  dae.pri  dae_install_deal_ii.pri  dae_install_library.pri  dae_install_py_module.pri  daetools-core.h  daetools-pymod.h  daetools.1  daetools_lapack_make.inc  install_dependencies_linux.sh  install_python_dependencies_linux.sh  new_release_compilation.txt  variable_types.h
Activity/: Activity.pro  activity_class_factory.h  class_factory.cpp  dllmain.cpp  simulation.h  stdafx.h
BONMIN_MINLPSolver/: BONMIN_MINLPSolver.pro  base_solvers.h  nlpsolver_class_factory.h  stdafx.cpp  stdafx.h
CapeOpenThermoPackage/: DAEToolsCapeOpen.aps  DAEToolsCapeOpen.cpp  DAEToolsCapeOpen.idl  DAEToolsCapeOpen.rc  DAEToolsCapeOpen_i.c  DAEToolsCapeOpen_p.c  daeCapeThermoMaterial.h  daeCapeThermoMaterial.rgs  dllmain.cpp  dllmain.h  resource.h
Config/: Config.pro  config.cpp  dllmain.cpp
CoolPropThermoPackage/: CoolPropThermoPackage.pro  cool_prop.cpp  cool_prop.h
Core/: Core.pro  action.cpp  activity.h  adouble.cpp  adouble.h  base_logging.cpp  base_logging.h  call_stats.h  class_factory.cpp  compute_stack_kernels_openmp.h  condnode.cpp  coreimpl.h  datareporting.h  definitions.h  domain.cpp  equation.cpp  export.h  external_function.cpp  finite_element_model.cpp  global_functions.cpp  helpers.h  if.cpp  inlines_io.h  inlines_modelarray.h  inlines_portarray.h  inlines_varparam_array.h  io.h  io_fns.h  logs.h  macros.h  nodes.h  nodes_array.cpp  objfun_constraints.cpp  ode_model.cpp  partial.cpp  setup_node_array.cpp  stn.cpp  tcpiplog.h  thermo_package.cpp  thermo_package.h  (+3 more)
DataReporting/: DataReporting.pro  base_data_reporters_receivers.cpp  data_reporter_remote.cpp  datareporting_class_factory.h  filereporter.cpp  html_file_reporter.cpp  hybrid_data_reporter_receiver.cpp  stdafx.h  text_file_reporter.cpp
Evaluator_OpenCL/: Evaluator_OpenCL.pro  dllmain.cpp
FE_DealII/: dealii_common.h  dealii_datareporter.h  dealii_template_inst.h
IDAS_DAESolver/: IDAS_DAESolver.pro  base_solvers.cpp  base_solvers.h  dae_array_matrix.h  dae_solvers.h  ida_la_solver_interface.h  ida_solver.cpp  stdafx.h
Installations/: Read Me.txt  acml_mkl_bashrc  calc_md5.sh  create_linux_package.sh  daetools.nsi
LA_CUSP/: cudaMakefile
LA_IntelPardiso/: mkl_pardiso_sparse_la_solver.cpp  mkl_pardiso_sparse_la_solver.h
LA_Lapack/: LA_Lapack.pro  dae_python.cpp  lapack_la_solver.cpp  lapack_la_solver.h
LA_Pardiso/: LA_Pardiso.pro  base_solvers.h  pardiso_sparse_la_solver.cpp  pardiso_sparse_la_solver.h
LA_SuperLU/: LA_SuperLU.pro  config_data.cpp  config_data.h  superlu_la_solver.cpp  superlu_la_solver.h  superlu_mt_gpu.cu  superlu_mt_gpu.h  superlu_solver.h
LA_Trilinos_Amesos/: dae_python.cpp  stdafx.h  trilinos_amesos_la_solver.cpp  trilinos_amesos_la_solver.h
NLOPT_NLPSolver/: base_solvers.h  nlpsolver_class_factory.h
OpenCS/: CMakeLists.txt  build_instructions.txt  compile_opencs.sh
OpenCS/OpenCS/: cs_evaluator.h  cs_machine.h
OpenCS/OpenCS/evaluators/: cs_evaluator_opencl.h  cs_evaluator_opencl_multidevice.cpp  cs_evaluator_openmp.cpp  cs_evaluator_openmp.h  cs_evaluator_sequential.h  cs_evaluators.h
OpenCS/OpenCS/models/: cs_model_builder.h  cs_model_io.cpp  cs_nodes.cpp  cs_number.cpp  cs_number.h  cs_simulation_options.h  default_simulation_options-ode.json  partitioner_2d_npde.cpp  partitioner_2d_npde.h  partitioner_metis.h  partitioner_simple.cpp  partitioner_simple.h
OpenCS/OpenCS/simulators/: auxiliary.cpp  auxiliary.h  config.cpp  cs_simulator_binary.cpp  cs_simulators.cpp  cvodes_la_functions.h  daemodel.cpp  daesimulation.cpp  daesimulator.h  data_reporter_csv.cpp  data_reporter_csv.h  data_reporter_hdf5.cpp  data_reporter_hdf5.h  idas_la_functions.h  lasolver_trilinos.h  logs.h  preconditioner_jacobi.cpp  preconditioner_ml.cpp
OpenCS/examples/: brusselator_2d.h  chemical_kinetics.h  dae_example_1.cpp  dae_example_2.ods  dae_example_3.ods  heat_conduction_2d.h  ode_example_2.cpp  ode_example_3.cpp  ode_example_3.ods  roberts.h
Units/: Units.pro  main.cpp  quantity.cpp  stdafx.h  units.cpp  units.h  units_pool.h
cxx-tutorials/: cdae_opt_tutorial1.pro  cdae_tutorial1.cpp  cdae_tutorial1.pro  cdae_tutorial14.pro  cdae_tutorial6.pro  cdae_whats_the_time.cpp  cdae_whats_the_time.pro  dealii_equation_generator.cpp  dealii_equation_generator.h  dealii_poisson.h  (+1 more)
trunk/OpenCS/: CMakeLists.txt  compile_opencs.sh  install.txt
trunk/OpenCS/OpenCS/: cs_evaluator.h  cs_machine.h  cs_model.h  opencs.h
trunk/OpenCS/OpenCS/evaluators/: cs_evaluator_opencl.cpp  cs_evaluator_opencl.h  cs_evaluator_opencl_factory.cpp  cs_evaluator_opencl_factory.h  cs_evaluator_opencl_multidevice.cpp  cs_evaluator_opencl_multidevice.h  cs_evaluator_openmp.cpp  cs_evaluator_sequential.cpp  cs_machine_kernels.cl  cs_opencl_platforms.h
trunk/OpenCS/OpenCS/models/: cs_dae_model.cpp  cs_dae_model.h  cs_model_builder.cpp  cs_model_builder.h  cs_model_io.cpp  cs_nodes.cpp  cs_nodes.h  cs_partitioner_metis.cpp  cs_partitioner_simple.cpp  cs_partitioners.h  default_simulation_options-dae.json  partitioner_metis.cpp
trunk/OpenCS/OpenCS/simulators/: auxiliary.h  config.cpp  csDAESimulator.pro  cs_dae_simulator.cpp  cs_data_reporters.h  cs_logs.h  cs_ode_simulator.cpp  cs_simulator_binary.cpp  cs_simulators.cpp  cs_simulators.h  daesimulation.cpp  daesimulator.h  daesolver.cpp  idas_la_functions.h  lasolver_interfaces.h  lasolver_trilinos.cpp  logs.cpp  odeisolver.cpp  preconditioner_ifpack.cpp  preconditioner_ml.cpp  trilinos_solver.h
trunk/OpenCS/examples/: advection_diffusion_2d.h  brusselator_2d.h  chemical_kinetics.h  dae_example_1.cpp  dae_example_2.cpp  dae_example_2.csv  dae_example_2.ods  dae_example_3.cpp  dae_example_3.ods  diurnal_kinetics_2d.h  heat_conduction_2d.h  ode_example_1.cpp  ode_example_2.cpp  ode_example_3.cpp  ode_example_3.csv  roberts.h  simulation_options-dae.json  simulation_options-ode.json
trunk/daetools-dev/examples/: CMakeLists.txt  tutorial1.cpp  tutorial5.cpp  tutorial6.cpp
(+1657 files in other folders)
